--- a/theme/foyers/templates/blocks/formulaire/freres_soeurs.html
+++ b/theme/foyers/templates/blocks/formulaire/freres_soeurs.html
@@ -11,7 +11,7 @@
     </div>
     <div class="col-md-3 col-sm-6">
         <label class="label_style left">{{rubedo.translate("Block.Inscription.Age")}}</label>
-        <input type="text" ng-model="inscription.freres_soeurs[$index].age" placeholder='{{rubedo.translate("Block.Inscription.Age")}}' readonly>
+        <input type="number" ng-model="inscription.freres_soeurs[$index].age" placeholder='{{rubedo.translate("Block.Inscription.Age")}}' readonly>
     </div>
     <p class="txt-red pull-right cursor-as-pointer" ng-click="formCtrl.removeFrereSoeur($index)">
         <span class="glyphicon glyphicon-minus-sign txt-red cursor-as-pointer"></span>{{rubedo.translate("Block.Inscription.FrereSoeur.Supprimer")}}
@@ -31,7 +31,7 @@
     </div>
     <div class="col-md-3 col-sm-6">
         <label class="label_style left">{{rubedo.translate("Block.Inscription.Age")}}</label>
-        <input type="text" ng-model="inscription.frere_soeur.age" placeholder='{{rubedo.translate("Block.Inscription.Age")}}' readonly>
+        <input type="text" ng-model="inscription.frere_soeur.age" placeholder='{{rubedo.translate("Block.Inscription.Age")}}'>
     </div>
     <p class="txt-red pull-right cursor-as-pointer" ng-click="formCtrl.addFrereSoeur(inscription.frere_soeur);inscription.frere_soeur={}">
         <span class="glyphicon glyphicon-plus-sign txt-red cursor-as-pointer"></span>{{rubedo.translate("Block.Inscription.FrereSoeur.Ajouter","Ajouter")}}
