--- a/theme/foyers/templates/blocks/formulaire/parents.html
+++ b/theme/foyers/templates/blocks/formulaire/parents.html
@@ -15,7 +15,7 @@
     <div class="container" ng-if="formCtrl.parentsEnsemble || formCtrl.parentsSepares ">
         <!--PERE-->
         <div class="col-md-6 col-sm-12">
-            <h3 class="row">{{rubedo.translate("Block.Inscription.Lui")}}</h3>
+            <h3 class="row">{{rubedo.translate("Block.Inscription.Pere")}}</h3>
             <div class="row">
                 <div class="col-sm-4"><label for="nomPere" class="label_style">{{rubedo.translate("Block.Inscription.Nom")}}*</label></div>
                 <div class="col-sm-8"><input class="form-control" type="text" id="nomPere" ng-model="inscription.nomPere" name="namePere" ng-required="!allowOneParentOnly || (allowOneParentOnly && !inscription.nomPers2)"></div>
@@ -40,7 +40,7 @@
                 <div class="col-sm-4"><label for="email_verif" class="label_style">{{rubedo.translate("Block.Inscription.Email.Verification")}}*</label></div>
                 <div class="col-sm-8">
                     <input type="email" class="form-control" id="emailPere_verif" name="emailPere_verif" placeholder="user@mydomain.com" ng-model="inscription.emailPere_verif" ng-required="inscription.emailPere">
-                    <p ng-if="mailError" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
+                    <p ng-if="mailError2" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
                 </div>
             </div>
             <div class="row" ng-if="!personneConnue">
@@ -70,8 +70,8 @@
                 
                 <!--ng-pattern="/^(0|\+33|0033){1}\/?[1-9]\s?([0-9]\s?){8}$/"-->
                 <div class="row" ng-if="!personneConnue">
-                    <div class="col-sm-4"><label for="tel1Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Fixe")}}**</label></div>
-                    <div class="col-sm-8"><input class="form-control" type="text" id="tel2Pere" name="tel2Pere"  ng-model="inscription.tel2Pere" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}"   ng-required="isTelephoneRequired()"></div>
+                    <div class="col-sm-4"><label for="tel1Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Fixe")}}*</label></div>
+                    <div class="col-sm-8"><input class="form-control" type="text" id="tel2Pere" name="tel2Pere"  ng-model="inscription.tel2Pere" required></div>
                 </div>
                 
             </div>    
@@ -79,7 +79,7 @@
      
         <!--MERE-->  
         <div class="col-md-6 col-sm-12">
-                <h3 class="row">{{rubedo.translate("Block.Inscription.Elle")}}</h3>
+                <h3 class="row">{{rubedo.translate("Block.Inscription.Mere")}}</h3>
                 <div class="row">
                     <div class="col-sm-4"><label for="nomMere" class="label_style">{{rubedo.translate("Block.Inscription.Nom")}}*</label></div>
                     <div class="col-sm-8"><input class="form-control" type="text" id="nomMere" ng-model="inscription.nomMere" name="nameMere" ng-required="!allowOneParentOnly || (allowOneParentOnly && !inscription.nomPers2)"></div>
@@ -104,7 +104,7 @@
                     <div class="col-sm-4"><label for="email_verif" class="label_style">{{rubedo.translate("Block.Inscription.Email.Verification")}}*</label></div>
                     <div class="col-sm-8">
                         <input class="form-control" type="email" id="email_verif" name="email_verif" placeholder="user@mydomain.com" ng-model="inscription.emailMere_verif" ng-required="inscription.emailMere">
-                        <p ng-if="mailError" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
+                        <p ng-if="mailError3" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
                     </div>
                 </div>
                 <div class="row">
@@ -135,8 +135,8 @@
                     
                     <!--ng-pattern="/^(0|\+33|0033){1}\/?[1-9]\s?([0-9]\s?){8}$/"-->
                     <div class="row">
-                        <div class="col-sm-4"><label for="tel2Mere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Fixe")}}**</label></div>
-                        <div class="col-sm-8"><input class="form-control" type="text" id="tel2Mere" name="tel2Mere"  ng-model="inscription.tel2Mere" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}"   ng-required="isTelephoneRequired()"></div>
+                        <div class="col-sm-4"><label for="tel2Mere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Fixe")}}*</label></div>
+                        <div class="col-sm-8"><input class="form-control" type="text" id="tel2Mere" name="tel2Mere"  ng-model="inscription.tel2Mere" required></div>
                     </div>
                     
                 </div>
@@ -145,7 +145,7 @@
         
         
         <div class="col-xs-12" ng-if="!personneConnue && formCtrl.parentsEnsemble">
-            <h3 class="row">{{rubedo.translate("Block.Inscription.Couple", "Couple")}}</h3>
+            <h3 class="row">{{rubedo.translate("Block.Inscription.Domicile.Familial", "Domicile familial")}}</h3>
         
             <div class="row">
                 <div class="col-sm-4"><label for="adressePere" class="label_style">{{rubedo.translate("Block.Inscription.Adresse")}}*</label></div>
@@ -163,21 +163,10 @@
                 <div class="col-sm-4"><label for="paysPere" class="label_style">{{rubedo.translate("Block.Inscription.Pays")}}</label></div>
                 <div class="col-sm-8"><input class="form-control" type="text" id="paysPere" ng-model="inscription.countryPere" name="countryPere"></div>
             </div>
-            <div class="row">
-                <div class="col-sm-4"><label for="emailPere" class="label_style">{{rubedo.translate("Block.Inscription.Email")}}*</label></div>
-                <div class="col-sm-8"><input class="form-control" type="emailPere" id="emailPere" name="emailPere"  ng-model="inscription.emailPere" placeholder="user@mydomain.com" required></div>
-            </div>    
-            <div class="row">
-                <div class="col-sm-4"><label for="email_verif" class="label_style">{{rubedo.translate("Block.Inscription.Email.Verification")}}*</label></div>
-                <div class="col-sm-8">
-                    <input type="email" class="form-control" id="email_verif" name="email_verif" placeholder="user@mydomain.com" ng-model="inscription.email_verif" ng-required="inscription.emailPere">
-                    <p ng-if="mailError" class="infos_validation txt-red">{{rubedo.translate("Block.Inscription.Email.Error.Different")}}</p>
-                </div>
-            </div>
             <!--ng-pattern="/^(0|\+33|0033){1}\/?[1-9]\s?([0-9]\s?){8}$/"-->
             <div class="row" ng-if="!personneConnue">
-                <div class="col-sm-4"><label for="tel1Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Fixe")}}**</label></div>
-                <div class="col-sm-8"><input class="form-control" type="text" id="tel1Pere" name="tel1Pere"  ng-model="inscription.tel1Pere" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}"   ng-required="isTelephoneRequired()"></div>
+                <div class="col-sm-4"><label for="tel2Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Fixe")}}*</label></div>
+                <div class="col-sm-8"><input class="form-control" type="text" id="tel2Pere" name="tel2Pere"  ng-model="inscription.tel2Pere" required></div>
             </div>
             
  
