--- a/theme/foyers/templates/blocks/formulaire/freres_soeurs.html
+++ b/theme/foyers/templates/blocks/formulaire/freres_soeurs.html
@@ -35,7 +35,7 @@
             <input class="form-control" type="number" ng-model="inscription.frere_soeur.age" placeholder='{{rubedo.translate("Block.Inscription.Age")}}'>
         </div>
         <p class="txt-red pull-right cursor-as-pointer" ng-click="formCtrl.addFrereSoeur(inscription.frere_soeur);inscription.frere_soeur={}">
-            <span class="form-control" class="glyphicon glyphicon-plus-sign txt-red cursor-as-pointer"></span>{{rubedo.translate("Block.Inscription.FrereSoeur.Ajouter","Ajouter")}}
+            <span class="glyphicon glyphicon-plus-sign txt-red cursor-as-pointer"></span>{{rubedo.translate("Block.Inscription.FrereSoeur.Ajouter","Ajouter")}}
         </p>
     </div>
 </div>
