--- a/theme/foyers/templates/blocks/inscriptionFoyer.html
+++ b/theme/foyers/templates/blocks/inscriptionFoyer.html
@@ -34,10 +34,10 @@
                             </ng-form>
                         </div>
                         
-                        <h2 ng-if="contentDetailCtrl.content.public=etudiant" class="capital txt-red" ng-class="{'displayed' : formCtrl.currentStage==3}" ng-click="formCtrl.setCurrentStage(3,infos_etudes.$valid)">{{rubedo.translate("Block.Inscription.Infos.Etudes", "Études")}}
+                        <h2 ng-if="inscription.public_type=etudiant" class="capital txt-red" ng-class="{'displayed' : formCtrl.currentStage==3}" ng-click="formCtrl.setCurrentStage(3,infos_etudes.$valid)">{{rubedo.translate("Block.Inscription.Infos.Etudes", "Études")}}
                                 <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="formCtrl.currentStage>3"></span>
                         </h2>
-                        <h2 ng-if="contentDetailCtrl.content.public=jeunePro" class="capital txt-red" ng-class="{'displayed' : formCtrl.currentStage==3}" ng-click="formCtrl.setCurrentStage(3,infos_etudes.$valid)">{{rubedo.translate("Block.Inscription.Infos.Travail","Situation professionnelle")}}
+                        <h2 ng-if="inscription.public_type=jeunePro" class="capital txt-red" ng-class="{'displayed' : formCtrl.currentStage==3}" ng-click="formCtrl.setCurrentStage(3,infos_etudes.$valid)">{{rubedo.translate("Block.Inscription.Infos.Travail","Situation professionnelle")}}
                                 <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="formCtrl.currentStage>3"></span>
                         </h2>
                         
