--- a/theme/foyers/templates/blocks/formulaire/infos_individuel.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_individuel.html
@@ -40,8 +40,8 @@
         <div class="col-sm-8"><input class="form-control" type="text" id="nationalite" ng-model="inscription.nationality" name="nationality"></div>
     </div>
     <div class="row" ng-if="!personneConnue">
-        <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}**</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="tel" name="tel" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}" ng-model="inscription.tel"  required>
+        <div class="col-sm-4"><label for="tel" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
+        <div class="col-sm-8"><input class="form-control" type="text" id="tel" name="tel" ng-model="inscription.tel"  required>
         </div>
     </div>
     
