--- a/theme/foyers/templates/blocks/formulaire/parents.html
+++ b/theme/foyers/templates/blocks/formulaire/parents.html
@@ -44,8 +44,8 @@
                 </div>
             </div>
             <div class="row" ng-if="!personneConnue">
-                    <div class="col-sm-4"><label for="tel2Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}**</label></div>
-                    <div class="col-sm-8"><input class="form-control" type="text" id="tel1Pere" name="tel1Pere" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}" ng-model="inscription.tel1Pere"  ng-required="isTelephoneRequired()">
+                    <div class="col-sm-4"><label for="tel2Pere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
+                    <div class="col-sm-8"><input class="form-control" type="text" id="tel1Pere" name="tel1Pere" ng-model="inscription.tel1Pere"  required>
                     </div>
             </div>
             
@@ -108,8 +108,8 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-4"><label for="tel2Mere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}**</label></div>
-                    <div class="col-sm-8"><input class="form-control" type="text" id="tel1Mere" name="tel1Mere" placeholder="{{formCtrl.paymentmeans.nativePMConfig.format_telephone}}" ng-model="inscription.tel1Mere"  ng-required="isTelephoneRequired()">
+                    <div class="col-sm-4"><label for="tel2Mere" class="label_style">{{rubedo.translate("Block.Inscription.Telephone.Portable")}}*</label></div>
+                    <div class="col-sm-8"><input class="form-control" type="text" id="tel1Mere" name="tel1Mere" ng-model="inscription.tel1Mere"  required>
                     </div>
                 </div>
             
