--- a/theme/foyers/templates/blocks/formulaire/etudes_travail.html
+++ b/theme/foyers/templates/blocks/formulaire/etudes_travail.html
@@ -21,31 +21,29 @@
     <div class="row" ng-if="etudiant && !personneConnue">
         <div class="col-sm-4"><label for="examensPrealables" class="label_style">{{rubedo.translate("Block.Inscription.Examens.Prealables")}} *</label></div>
         <div class="col-sm-8">
-            <div class="row">
-                <input type="radio"  name="examensPrealables" id="oui" value="oui" ng-model="inscription.examensPrealables.examensPrealables" required>
-                            <label for="oui">{{rubedo.translate("Block.Inscription.Oui")}}</label>
-            </div>
-            <div class="row">
-                <input type="radio"  name="examensPrealables" id="non" value="non" ng-model="inscription.examensPrealables.examensPrealables">
-                            <label for="non">{{rubedo.translate("Block.Inscription.Non")}}</label>
-            </div>
+                <input type="radio"  name="examensPrealables" id="oui" value="oui" ng-model="inscription.examensPrealables" ng-click="formCtrl.examensPrealables = true;" required>
+                            <label for="oui" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Oui")}}</label>	
+                <input type="radio"  name="examensPrealables" id="non" value="non" ng-model="inscription.examensPrealables" ng-click="formCtrl.examensPrealables = false;">
+                            <label for="non" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Non")}}</label>
         </div>
     </div>
-    <div class="row" ng-if="inscription.examensPrealables='oui' && etudiant && !personneConnue">
-        <div class="col-sm-4"><label for="examensTypes" class="label_style">{{rubedo.translate("Block.Inscription.Examens.Types")}}</label></div>
-        <div class="col-sm-8"><input class="form-control" type="text" id="examensTypes" ng-model="inscription.examensTypes" name="examensTypes"></div>
-    </div>
-    <div class="row" ng-if="inscription.examensPrealables='oui' && etudiant && !personneConnue">
-        <div class="col-sm-4"><label for="dateResultats" class="label_style">{{rubedo.translate("Block.Inscription.Date.Resultats")}}</label></div>
-        <div class="col-sm-8">
-            <div class="dropdown">
-                <a showtab class="dropdown-toggle" id="dropdowndateResultats" role="button" data-toggle="dropdown" data-target="#" href="#">
-                    <div class="input-group"><input readonly id="dateResultats" ng-model="inscription.dateResultats" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
-                    </div>
-                </a>
-                <ul class="dropdown-menu" role="menu">
-                    <datetimepicker data-ng-model="inscription.dateResultats"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateResultats', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateResultats = (inscription.birthdate |date:'dd/MM/yyyy'); moment.locale('fr')"/>
-                </ul> 
+    <div ng-if="formCtrl.examensPrealables && etudiant && !personneConnue"">
+        <div class="row">
+            <div class="col-sm-4"><label for="examensTypes" class="label_style">{{rubedo.translate("Block.Inscription.Examens.Types")}}</label></div>
+            <div class="col-sm-8"><input class="form-control" type="text" id="examensTypes" ng-model="inscription.examensTypes" name="examensTypes"></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-4"><label for="dateResultats" class="label_style">{{rubedo.translate("Block.Inscription.Date.Resultats")}}</label></div>
+            <div class="col-sm-8">
+                <div class="dropdown">
+                    <a showtab class="dropdown-toggle" id="dropdowndateResultats" role="button" data-toggle="dropdown" data-target="#" href="#">
+                        <div class="input-group"><input readonly id="dateResultats" ng-model="inscription.dateResultats" type="text" class="form-control" required><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+                        </div>
+                    </a>
+                    <ul class="dropdown-menu" role="menu">
+                        <datetimepicker data-ng-model="inscription.dateResultats"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateResultats', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateResultats = (inscription.dateResultats |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                    </ul> 
+                </div>
             </div>
         </div>
     </div>
@@ -59,7 +57,7 @@
                     </div>
                 </a>
                 <ul class="dropdown-menu" role="menu">
-                    <datetimepicker data-ng-model="inscription.dateDebutAnnee"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateDebutAnnee', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateDebutAnnee = (inscription.birthdate |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                    <datetimepicker data-ng-model="inscription.dateDebutAnnee"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateDebutAnnee', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateDebutAnnee = (inscription.dateDebutAnnee |date:'dd/MM/yyyy'); moment.locale('fr')"/>
                 </ul> 
             </div>
         </div>
@@ -74,7 +72,7 @@
                     </div>
                 </a>
                 <ul class="dropdown-menu" role="menu">
-                    <datetimepicker data-ng-model="inscription.dateFinAnnee"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateFinAnnee', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateFinAnnee = (inscription.birthdate |date:'dd/MM/yyyy'); moment.locale('fr')"/>
+                    <datetimepicker data-ng-model="inscription.dateFinAnnee"  data-datetimepicker-config="{dropdownSelector: '#dropdowndateFinAnnee', startView: 'year', minView:'day'}" data-on-set-time="inscription.dateFinAnnee = (inscription.dateFinAnnee |date:'dd/MM/yyyy'); moment.locale('fr')"/>
                 </ul> 
             </div>
         </div>
