--- a/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
@@ -16,16 +16,16 @@
     <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="origine" class="label_style">{{rubedo.translate("Block.Inscription.Connaissance.Foyer")}}*</label></div>
         <div class="col-sm-8">
-            <input type="checkbox"  name="origine" id="relations" value="relations" ng-model="inscription.origine" required>
+            <input type="checkbox"  name="origine" id="relations" value="relations" ng-model="inscription.origine.origine" required>
                         <label for="relations">{{rubedo.translate("Block.Inscription.Relations")}}</label>
-            <input type="checkbox"  name="origine" id="tracts" value="tracts" ng-model="inscription.origine">
+            <input type="checkbox"  name="origine" id="tracts" value="tracts" ng-model="inscription.origine.origine">
                         <label for="tracts">{{rubedo.translate("Block.Inscription.Tracts")}}</label>
-            <input type="checkbox"  name="origine" id="site" value="site" ng-model="inscription.origine">
+            <input type="checkbox"  name="origine" id="site" value="site" ng-model="inscription.origine.origine">
                         <label for="site">{{rubedo.translate("Block.Inscription.Site")}}</label>
-            <input type="checkbox"  name="origine" id="annonces" value="annonces" ng-model="inscription.origine">
-                        <label for="site">{{rubedo.translate("Block.Inscription.Annonces")}}</label>
+            <input type="checkbox"  name="origine" id="annonces" value="annonces" ng-model="inscription.origine.origine">
+                        <label for="annonces">{{rubedo.translate("Block.Inscription.Annonces")}}</label>
             <div class="col-sm-3">
-                <input type="checkbox"  name="origine" id="autre" value="autre" ng-model="inscription.origine">
+                <input type="checkbox"  name="origine" id="autre" value="autre" ng-model="inscription.origine.origine">
                             <label for="autre">{{rubedo.translate("Block.Inscription.Autre")}}</label>
             </div>
             <div class="col-sm-5">
