--- a/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
@@ -1,7 +1,7 @@
     <!--NOM-->
     <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="loisirs" class="label_style">{{rubedo.translate("Block.Inscription.Loisirs")}}</label></div>
-        <div class="col-sm-8"><textarea rows="3" id="loisirs" ng-model="inscription.loisirs" name="address"></textarea></div>
+        <div class="col-sm-8"><textarea rows="3" id="loisirs" ng-model="inscription.loisirs" name="loisirs"></textarea></div>
     </div>
     <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="fumeur" class="label_style">{{rubedo.translate("Block.Inscription.Fumeur")}}*</label></div>
@@ -17,16 +17,16 @@
         <div class="col-sm-4"><label for="origine" class="label_style">{{rubedo.translate("Block.Inscription.Connaissance.Foyer")}}*</label></div>
         <div class="col-sm-8">
             <input type="checkbox"  name="origine" id="relations" value="relations" ng-model="inscription.origine.origine" required>
-                        <label for="relations">{{rubedo.translate("Block.Inscription.Relations")}}</label>
+                        <label for="relations" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Relations")}}</label>
             <input type="checkbox"  name="origine" id="tracts" value="tracts" ng-model="inscription.origine.origine">
-                        <label for="tracts">{{rubedo.translate("Block.Inscription.Tracts")}}</label>
+                        <label for="tracts" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Tracts")}}</label>
             <input type="checkbox"  name="origine" id="site" value="site" ng-model="inscription.origine.origine">
-                        <label for="site">{{rubedo.translate("Block.Inscription.Site")}}</label>
+                        <label for="site" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Site")}}</label>
             <input type="checkbox"  name="origine" id="annonces" value="annonces" ng-model="inscription.origine.origine">
-                        <label for="annonces">{{rubedo.translate("Block.Inscription.Annonces")}}</label>
+                        <label for="annonces" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Annonces")}}</label>
             <div class="col-sm-3">
-                <input type="checkbox"  name="origine" id="autre" value="autre" ng-model="inscription.origine.origine">
-                            <label for="autre">{{rubedo.translate("Block.Inscription.Autre")}}</label>
+                <input type="checkbox" name="origine" id="autre" value="autre" ng-model="inscription.origine.origine">
+                            <label for="autre" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Autre")}}</label>
             </div>
             <div class="col-sm-5">
                 <input class="form-control" type="text" id="precisions" ng-model="inscription.precisions" name="precisions" placeholder="Préciser...">
