--- a/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
@@ -1,7 +1,7 @@
     <!--NOM-->
     <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="loisirs" class="label_style">{{rubedo.translate("Block.Inscription.Loisirs")}}</label></div>
-        <div class="col-sm-8"><textarea rows="3" id="loisirs" ng-model="inscription.loisirs" name="loisirs"></textarea></div>
+        <div class="col-sm-8"><textarea class="form-control" rows="3" id="loisirs" ng-model="inscription.loisirs" name="loisirs"></textarea></div>
     </div>
     <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="fumeur" class="label_style">{{rubedo.translate("Block.Inscription.Fumeur")}}*</label></div>
