--- a/theme/foyers/templates/blocks/inscriptionFoyer.html
+++ b/theme/foyers/templates/blocks/inscriptionFoyer.html
@@ -43,7 +43,7 @@
                         
                         <div id="inscriptionStage3" class="collapse">
                             <ng-form name="infos_travail">
-                                    <div  class="row" ng-include="formCtrl.travail_infos"></div>
+                                    <!--<div  class="row" ng-include="formCtrl.travail_infos"></div>-->
                                     <div class="row text-center">
                                         <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_travail.$invalid}" ng-click="formCtrl.setCurrentStage(3,infos_travail.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
                                         <p ng-if="infos_travail.$invalid && infos_travail.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
@@ -57,7 +57,7 @@
                         
                         <div id="inscriptionStage4" class="collapse">
                             <ng-form name="infos_complementaires">
-                                    <div  class="row" ng-include="formCtrl.complement_infos"></div>
+                                    <!--<div  class="row" ng-include="formCtrl.complement_infos"></div>-->
                                     <div class="row text-center">
                                         <div class="button submit cursor-as-pointer" ng-class="{'disabled' : infos_complementaires.$invalid}" ng-click="formCtrl.setCurrentStage(4,infos_complementaires.$valid)" >{{rubedo.translate("Blocks.Checkout.Button.Continue")}}</div>
                                         <p ng-if="infos_complementaires.$invalid && infos_complementaires.$dirty" class="txt-marron">{{rubedo.translate("Block.Inscription.Champs","Merci de bien remplir tous les champs obligatoires")}}</p>
@@ -70,7 +70,7 @@
                                 <span class="fa fa-pencil pull-right cursor-as-pointer" ng-if="formCtrl.currentStage>5"></span>
                         </h2>
                         
-                        <div id="inscriptionStage5" class="collapse">
+                        <div id="inscriptionStage5" class="collapse"> 
                             <ng-form name="photo">
                                     <div  class="row" ng-include="formCtrl.photo"></div>
                                     <div class="row text-center">
