--- a/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
@@ -7,9 +7,9 @@
         <div class="col-sm-4"><label for="fumeur" class="label_style">{{rubedo.translate("Block.Inscription.Fumeur")}}*</label></div>
         <div class="col-sm-8">
             <input type="radio"  name="fumeur" id="fumeur" value="fumeur" ng-model="inscription.fumeur" required>
-                        <label for="fumeur" class="sexe_label">{{rubedo.translate("Block.Inscription.Oui")}}</label>	
+                        <label for="fumeur" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Oui")}}</label>	
             <input type="radio"  name="fumeur" id="non_fumeur" value="non_fumeur" ng-model="inscription.sexe.sexe">
-                        <label for="non_fumeur" class="sexe_label">{{rubedo.translate("Block.Inscription.Non")}}</label>
+                        <label for="non_fumeur" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Non")}}</label>
         </div>
     </div>
     
