--- a/theme/foyers/templates/blocks/formulaire/lettre_motivation.html
+++ b/theme/foyers/templates/blocks/formulaire/lettre_motivation.html
@@ -1,6 +1,6 @@
 <div class="container">
         <div class="row" ng-if="!personneConnue">
             <div class="col-sm-4"><label for="motivation" class="label_style">{{rubedo.translate("Block.Inscription.Motivation")}}*</label></div>
-            <div class="col-sm-8"><textarea rows="10" id="motivation" ng-model="inscription.motivation" name="motivation" placeholder="Présentez-vous brièvement et expliquez votre intérêt pour le foyer" required></textarea></div>
+            <div class="col-sm-8"><textarea class="form-control" rows="20" id="motivation" ng-model="inscription.motivation" name="motivation" placeholder="Présentez-vous brièvement et expliquez votre intérêt pour le foyer" required></textarea></div>
         </div>
 </div>
