--- a/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
@@ -5,7 +5,7 @@
     </div>
     <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="fumeur" class="label_style">{{rubedo.translate("Block.Inscription.Fumeur")}}*</label></div>
-        <div class="col-sm-8">
+        <div class="col-sm-8" class="display_right">
             <input type="radio"  name="fumeur" id="fumeur" value="fumeur" ng-model="inscription.fumeur" required>
                         <label for="fumeur" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Oui")}}</label>	
             <input type="radio"  name="fumeur" id="non_fumeur" value="non_fumeur" ng-model="inscription.sexe.sexe">
@@ -13,7 +13,7 @@
         </div>
     </div>
     
-    <div class="row" ng-if="!personneConnue">
+    <!--<div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="origine" class="label_style">{{rubedo.translate("Block.Inscription.Connaissance.Foyer")}}*</label></div>
         <div class="col-sm-8">
             <input type="checkbox"  name="origine" id="relations" value="relations" ng-model="inscription.origine.origine" required>
@@ -34,6 +34,11 @@
             
                         
         </div>
+    </div>-->
+
+    <div class="row" ng-repeat="question in formCtrl.questions | orderBy:'order' track by $index">
+            <ng-include src="formCtrl.questionsComplementaires"></ng-include>
     </div>
+
     
     
