--- a/theme/foyers/css/foyers.less
+++ b/theme/foyers/css/foyers.less
@@ -533,7 +533,7 @@ label.label_style, .label_style label:not(.radio-inline) {
     top: .7em;
 }
 
-.display_left {text-align:left;}
+.display_left {text-align:left !important;}
 
 ng-form[name=inscription_form] input[type=radio]:checked+label.sexe_label, ng-form[name=inscription_form] input[type=radio]+label.sexe_label:hover,
 ng-form[name=inscription_form] input[type=checkbox]:checked+label.sexe_label, ng-form[name=inscription_form] input[type=checkbox]+label.sexe_label:hover{
