--- a/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
+++ b/theme/foyers/templates/blocks/formulaire/infos_complementaires.html
@@ -5,7 +5,7 @@
     </div>
     <div class="row" ng-if="!personneConnue">
         <div class="col-sm-4"><label for="fumeur" class="label_style">{{rubedo.translate("Block.Inscription.Fumeur")}}*</label></div>
-        <div class="col-sm-8" class="display_left">
+        <div class="col-sm-8 display_left">
             <input type="radio"  name="fumeur" id="fumeur" value="fumeur" ng-model="inscription.fumeur" required>
                         <label for="fumeur" class="sexe_label boite">{{rubedo.translate("Block.Inscription.Oui")}}</label>	
             <input type="radio"  name="fumeur" id="non_fumeur" value="non_fumeur" ng-model="inscription.sexe.sexe">
